# PResize

./: CMakeLists.txt  generate_resize.cpp  main.cpp
